<resources>
    <string name="app_name">轻松印</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="news">新闻</string>
    <string name="movie">电影</string>
    <string name="joke">段子</string>
    <string name="image">图片</string>
    <string name="loginAccountHint">手机号/邮箱</string>
    <string name="loginPwdHint">密码</string>
    <string name="loginForgetPwd">忘记密码</string>
    <string name="loginFastSign">快速注册</string>
    <string name="loginBtnLogin">登录</string>

</resources>
