<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity"
    tools:ignore="RtlHardcoded"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="98dp"
        android:contentDescription="@string/image"
        android:elevation="2dp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:ignore="UnusedAttribute"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_name"
        style="@style/CommonTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_head"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <com.vince.library.widgets.ClearableEditText
            android:id="@+id/et_name"
            style="@style/CommonClearableEditText"
            android:layout_width="match_parent"
            android:hint="@string/loginAccountHint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            tools:ignore="RtlHardcoded,RtlSymmetry"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        style="@style/CommonTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/til_name"
        app:layout_constraintRight_toRightOf="@+id/til_name"
        app:layout_constraintTop_toBottomOf="@+id/iv_head"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorIcon"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <com.vince.library.widgets.ClearableEditText
            android:id="@+id/et_password"
            style="@style/CommonClearableEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginPwdHint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/tv_forget_password"
        style="@style/CommonClickTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/loginForgetPwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"/>


    <TextView
        android:id="@+id/tv_trial"
        style="@style/CommonClickTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/loginFastSign"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_forget_password"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"/>


    <Button
        android:id="@+id/btn_login"
        style="@style/CommonButton"
        android:layout_width="0dp"
        android:layout_marginTop="190dp"
        android:text="@string/loginBtnLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/til_password"
        app:layout_constraintRight_toRightOf="@+id/til_password"
        app:layout_constraintTop_toBottomOf="@+id/iv_head"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>


</android.support.constraint.ConstraintLayout>